[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cymetric"
authors = [
    {name = "Cyclus Development Team", email = "cyclus-dev@googlegroups.com"},
]
maintainers = [
    {name = "Cyclus Development Team", email = "cyclus-dev@googlegroups.com"},
]
description = "Cyclus Metric Calculator"
readme = "README.rst"
requires-python = "3"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
]
# dependencies = [
#     "requests",
#     'importlib-metadata; python_version<"3.8"',
# ]
dynamic = ["version"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
# my-script = "my_package.module:function"